fixed local storage function to store more than one score, added clear scores and back button function

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li class="hover btn" id="answer4"></li>
       </ul>
     </div>
+    <h2 class="hide" id="answerCheck"></h2>
     <div class="hide" id="submitScore">
       <h1>All done!</h1>
       <p>Your final score is <span id="userScore"></span></p>
